f37d059947112aeca443bbb9070236df827874bb

--- a/index.html
+++ b/index.html
@@ -13,52 +13,27 @@
      <header class="header">
          <nav>
             <picture>
-                 <img src="./Imagenes/Logo Header.png"  alt="Logo" class="header__logo">
+                 <img src="./Imagenes/Logo.svg"  alt="Logo" class="header__logo">
             </picture>
             <ul class="header__menu">
                  <li class="menu-header__item">
-                     <a href="./Views/servicios.html" class="menu-header__link">Nuestros servicios</a>
+                     <a href="./Views/servicios.html" class="menu-header__link">Servicios</a>
                  </li>
                  <li class="menu-header__item">
-                     <a href="./Views/nosotros.html" class="menu-header__link">Sobre nosotros</a>
+                     <a href="./Views/nosotros.html" class="menu-header__link">Nosotros</a>
                  </li>
                  <li class="menu-header__item">
-                     <a href="./Views/ubicacion.html" class="menu-header__link">Donde encontrarnos</a>
+                     <a href="./Views/ubicacion.html" class="menu-header__link">Ubicacion</a>
                  </li>
                  <li class="menu-header__item">
-                     <a href="./Views/contacto.html" class="menu-header__link">Contactanos</a>
+                     <a href="./Views/contacto.html" class="menu-header__link">Contacto</a>
                  </li>
             </ul>
          </nav>
      </header>
      <main id="grilla_main">
       <section id="lema" class="animare__animated animate__fadeInUp">
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
         <h1 class="lema__titulo animate__animated animate__fadeInUp">Tus mecanicos de confianza</h1>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
        </section>
        <section id="introduccion">
         <article>
@@ -82,7 +57,6 @@
                  <p class="valores__parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Culpa excepturi eligendi eos beatae soluta hic et ratione necessitatibus dolores laboriosam velit voluptates porro molestias, repellat nobis nemo suscipit. Eius, omnis.</p>
             </div>
         </article>
-       <br/> 
        </section>
        <section id="Marcas"> 
         <article class="Marcas">
@@ -94,19 +68,11 @@
                  <img src="./Imagenes/Logos marcas/Marca 5.png" alt="ford" class="Marcas-ford__logos--size">
                  <img src="./Imagenes/Logos marcas/Marca 8.png" alt="citroen" class="Marcas-bmw__logos--size">
             </div>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
             <div class="Marcas__logos-intermedios">
                  <img src="./Imagenes/Logos marcas/Marca 7.png" alt="reno" class="Marcas-reno__logos--size">
                  <h3 class="marcas__titulo" data-aos="zoom-in-down">Trabajamos todas las marcas</h3>
                  <img src="./Imagenes/Logos marcas/Marca 6.png" alt="bmw" class="Marcas__logos--size">
             </div>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
             <div class="Marcas__logos">
                 <img src="./Imagenes/Logos marcas/Marca 11.png" alt="nissan" class="Marcas-ni__logos--size">
                 <img src="./Imagenes/Logos marcas/Marca 10.png" alt="Toyota" class="Marcas__logos--size">
@@ -115,7 +81,6 @@
                 <img src="./Imagenes/Logos marcas/Marca 14.png" alt="peugeot" class="Marcas__logos--size">
                 <img src="./Imagenes/Logos marcas/Marca 13.png" alt="mercedez" class="Marcas-mer__logos--size">
             </div>
-            <br/>
         </article>
       </section>
     </main>
@@ -150,7 +115,7 @@
             </div>
          </ul>
          <picture>
-         <img src="./Imagenes/Logo Footer.png" alt="Imagen Logo" class="footer__logo">
+         <img src="./Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
         </picture>
        </section>
          <br/>
