--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
        </section>
         <aside id="Intro_imagen">
             <img src="./Imagenes/Index img 2.png" alt="Imagen motor " class="intro__imagen">
-        </aside>
-       <br/>   
+       </aside>
        <aside id="valores_imagen">
         <img src="./Imagenes/Index img 3.png" alt="Imagen apreton de manos" class="valores__imagen"> 
        </aside>
@@ -86,37 +85,35 @@
     </main>
      <footer class="footer">
         <section class="footer__menuyimg">
-         <ul class="footer__menu">
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestras redes:</li>
-               <ul>
-                 <li class="footer-menu__menu__item">Facebook</li>
-                 <li class="footer-menu__menu__item">Instagram</li>
-                 <li class="footer-menu__menu__item">Youtube</li>
-               </ul>
+                <h4 class="footer-menu__item">Horarios:</h4>
+                  <ul>
+                     <li class="footer-menu__menu__item">Lu-Ju 08-19 Hrs</li>
+                     <li class="footer-menu__menu__item">Vie 8-18 Hrs</li>
+                     <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
+                  </ul>
             </div>
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">Nuestros horarios:</li>
-               <ul>
-                  <li class="footer-menu__menu__item">Lu-Jue 08:00 a 19:00 Hrs</li>
-                  <li class="footer-menu__menu__item">Vie 08:30 a 18:30 Hrs</li>
-                  <li class="footer-menu__menu__item">Sa-Dom Cerrado</li>
-               </ul>
+                <h4 class="footer-menu__item">
+                    <a href="./Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
+                </h4>
             </div>
+            <picture>
+                <img src="./Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
+            </picture>
             <div class="footer__menu--boxsize">
-             <li>
+             <h4>
                 <a href="./Views/contacto.html" class="footer-menu__item">Contacto</a>
-             </li>
+             </h4>
             </div>
             <div class="footer__menu--boxsize">
-             <li class="footer-menu__item">
-                 <a href="./Views/ubicacion.html" class="footer-menu__item">Ubicacion</a>
-             </li>
+                <h4 class="footer-menu__item">Redes:</li>
+                  <ul>
+                    <li class="footer-menu__menu__item">Facebook</li>
+                    <li class="footer-menu__menu__item">Instagram</li>
+                    <li class="footer-menu__menu__item">Youtube</li>
+                  </h4>
             </div>
-         </ul>
-         <picture>
-         <img src="./Imagenes/Logo footer.svg" alt="Imagen Logo" class="footer__logo">
-        </picture>
        </section>
          <br/>
          <h4 class="footer__copy">© 2022 Cor Competición, todos los derechos reservados.</h4>
