Agregado de sass

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
      <header class="header">
-         <nav>
+         <nav class="header_nav">
             <picture>
                  <img src="./Imagenes/Logo.svg"  alt="Logo" class="header__logo">
             </picture>
